fixed the weird positioning of the compose button on smaller browser dimensions

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -29,7 +29,7 @@
   padding: 0.5em;
   border: 0.1em solid white;
   border-radius: 0.25em;
-  margin-right: 35em;
+  margin-right: 2em;
   margin-top: 1.15em;
 }
 
